# mind-map-generator-gpts

./: .gitignore  Makefile  README.md  TODO.md  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: health.py  process.py
backend/app/services/: file_utils.py  llm_client.py
frontend/: .eslintrc.json  .prettierignore  README.md  package-lock.json  package.json
frontend/src/: App.css  App.js
